# parser-and-llm

cryptonews_agent/: .env.example  .gitignore  README.md  pyproject.toml
cryptonews_agent/alembic/: env.py
cryptonews_agent/alembic/versions/: 0001_initial.py
cryptonews_agent/src/: app.py  config.py  logging_conf.py
cryptonews_agent/src/db/: base.py  crud.py  models.py
cryptonews_agent/src/ingest/: base.py  dedup.py  normalizer.py  reddit_source.py  telegram_source.py  truth_social_source.py  twitter_source.py
cryptonews_agent/src/llm/: classifiers.py  client.py  schema.py
cryptonews_agent/src/pipeline/: scheduler.py  worker.py
cryptonews_agent/src/search/: query.py
cryptonews_agent/src/utils/: text.py  time.py
cryptonews_agent/tests/: conftest.py  test_db_crud.py  test_ingest_normalizer.py  test_llm_schema.py  test_pipeline_worker.py  test_search_query.py
